# brainrot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/pest/: brainfuck.pest
